include(FindPkgConfig)
IF( NOT WIN32)
        SET ( LIBTORRENT_MIN_VERSION 0.13 )
        pkg_check_modules( LIBTORRENT libtorrent-rasterbar>=${LIBTORRENT_MIN_VERSION} )
        IF( LIBTORRENT_FOUND )
                INCLUDE_DIRECTORIES( ${LIBTORRENT_INCLUDE_DIRS} )
                LINK_LIBRARIES( ${LIBTORRENT_LIBRARIES} )
        ELSE()
                MESSAGE( FATAL_ERROR "libtorrent-rasterbar library not found! Please install the package or toggle OPTION_TORRENT_SYSTEM to OFF")
        ENDIF()
ELSE( NOT WIN32)
        link_directories( ${boost_LIB_DIR} )
        INCLUDE_DIRECTORIES( ${boost_INCLUDE_DIR} )
        ADD_DEFINITIONS( -mthreads  )
        LINK_LIBRARIES( -mthreads torrent-rasterbar ${Boost_LIBRARIES} z ws2_32 mswsock  )
ENDIF( NOT WIN32)


IF (LIBTORRENT_FOUND )
	add_library("Torrent" TorrentDownloader.cpp)
ENDIF()
