add_library(xmlrpc
	src/XmlRpcSource.h
	src/XmlRpcUtil.cpp
	src/XmlRpcSocket.cpp
	src/XmlRpcUtil.h
	src/XmlRpcValue.h
	src/base64.h
	src/XmlRpcException.h
	src/XmlRpc.h
	src/XmlRpcSocket.h
	src/XmlRpcClient.h
	src/XmlRpcClient.cpp
	src/XmlRpcDispatch.h
	src/XmlRpcValue.cpp
	src/XmlRpcSource.cpp
	src/XmlRpcDispatch.cpp
)

